Adjusted styling for dark mode and fixed and issue where the wrong nav was showing one the pet edit page for guests

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,17 @@ body {
     font-family: "Montserrat", sans-serif !important;
 }
 
+.dark-mode .container {
+    background-color: #121212 !important;
+    color: #ffffff !important;
+}
+
+.dark-mode .nav-link,
+.dark-mode .btn {
+    background-color: #333 !important;
+    color: #ffffff !important;
+}
+
 .sign-up-form-wrapper {
     background-color: #f8f9fa;
     border: 1px solid #eaeaea;
@@ -10,8 +21,8 @@ body {
 
 body,
 p.lead {
-    background-color: #f8f9fa;
-    color: #212529;
+    background-color: #212529;
+    color: white;
 }
 
 h1.display-4,
